Implement documentation, fix some issues